k8s/employee-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-svc
  namespace: employee-dir
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-svc
  template:
    metadata:
      labels:
        app: employee-svc
    spec:
      containers:
        - name: employee-svc
          image: kastrov/employee-svc:PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: employee-svc
  namespace: employee-dir
spec:
  selector:
    app: employee-svc
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
