k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: employee-dir
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
