k8s/domain-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emp-dir-ingress
  namespace: employee-dir
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # ✅ HTTPS LISTENER
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'

    # ✅ SSL CERTIFICATE
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:560185625463:certificate/0b549015-cafd-408b-ad52-8566203512d4

    # ✅ FORCE HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: '443'

    alb.ingress.kubernetes.io/healthcheck-path: /health

spec:
  ingressClassName: alb

  rules:
    - host: learndevops01.click
      http:
        paths:
          - path: /api/employees
            pathType: Prefix
            backend:
              service:
                name: employee-svc
                port:
                  number: 5001

          - path: /api/departments
            pathType: Prefix
            backend:
              service:
                name: dept-svc
                port:
                  number: 5002

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
