k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emp-dir-ingress
  namespace: employee-dir
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health

spec:
  ingressClassName: alb   

  rules:
    - http:
        paths:
          - path: /api/employees
            pathType: Prefix
            backend:
              service:
                name: employee-svc
                port:
                  number: 5001

          - path: /api/departments
            pathType: Prefix
            backend:
              service:
                name: dept-svc
                port:
                  number: 5002

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
